# foxglove_compressed_video_transport

./: CHANGELOG.rst  CMakeLists.txt  README.md  foxglove_compressed_video_transport.repos  foxglove_plugins.xml  package.xml  rosdoc2.yaml
.github/workflows/: ci.yaml
doc/: conf.py  index.rst
include/foxglove_compressed_video_transport/: publisher.hpp  subscriber.hpp
launch/: cam.launch.py
src/: manifest.cpp  publisher.cpp  subscriber.cpp
